# chinese_province_city_area_mapper

./: .gitignore  README.MD  pyproject.toml  pytest.ini
cpca/: __init__.py  drawer.py  exceptions.py  matcher.py
tests/: conftest.py  test_cpca.py  test_drawer.py  test_performance.py
