[project]
name = "cpca_polars"
version = "1.0.0"
description = "A high-performance module for extracting province, city, and district information from Chinese text strings and mapping them."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["folium>=0.20.0", "polars>=1.35.2", "pyahocorasick>=2.2.0"]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[dependency-groups]
dev = [
    "mock>=5.2.0",
    "progress>=1.6.1",
    "pyecharts>=2.0.9",
    "pytest>=9.0.1",
    "setuptools>=80.9.0",
]
