[project]
name = "cpca_polars"
version = "1.0.1"
description = "A high-performance module for extracting province, city, and district information from Chinese text strings and mapping them."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["folium>=0.20.0", "polars>=1.35.2", "pyahocorasick>=2.2.0"]
keywords = [
    "china",
    "address",
    "province",
    "city",
    "district",
    "polars",
    "high-performance",
]
authors = [{ name = "KongHaYao", email = "3446798488@qq.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Text Processing",
]

[project.urls]
Homepage = "https://github.com/konghayao/chinese_province_city_area_mapper"
Repository = "https://github.com/konghayao/chinese_province_city_area_mapper"
Documentation = "https://github.com/konghayao/chinese_province_city_area_mapper#readme"

[tool.hatchling]
include = ["cpca/**/*.py", "cpca/resources/*.csv"]

[tool.hatchling.metadata]
allow-direct-references = true

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[dependency-groups]
dev = [
    "mock>=5.2.0",
    "progress>=1.6.1",
    "pyecharts>=2.0.9",
    "pytest>=9.0.1",
    "setuptools>=80.9.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cpca"]
